name:                haskell-pong
version:             0.1.0.0
synopsis:            Basic pong, now in Haskell
description:         Please see README.md
homepage:            https://github.com/dubdromic/haskell-pong
license:             GPLv2
license-file:        LICENSE
author:              Corin Schedler
maintainer:          corin@dubdromic.com
copyright:           2016 Corin Schedler
category:            Games
build-type:          Simple
cabal-version:       >=1.10

executable haskell-pong
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       OpenGL,
                       GLUT,
                       containers,
                       random,
                       time
